# Overkill

./: README.md  SPEC.md  SPEC2.md  SPEC3.md  overkill.py  pyproject.toml  requirements.txt
overkill/: __init__.py  main.py
overkill-ts/: .gitignore  README.md  electron.vite.config.ts  package.json  tsconfig.json
overkill-ts/src/agents/: code-explorer.ts  crystallizer.ts  types.ts  vibe-engineer.ts
overkill-ts/src/main/: agent-controller.ts  index.ts  ipc-handlers.ts  preload.ts
overkill-ts/src/renderer/: App.tsx  index.html  index.tsx
overkill-ts/src/renderer/components/: ChatInterface.tsx  InputBox.tsx  MessageBubble.tsx  WorkerSidebar.tsx
overkill-ts/src/shared/: ipc-channels.ts  types.ts
overkill/core/: __init__.py  crystallizer.py  engineer.py  explorer.py
overkill/ui/: __init__.py  adapter.py  textual_ui.py
overkill/ui/widgets/: __init__.py  tradeoffs_panel.py
