[project]
name = "overkill"
version = "0.1.0"
description = "Transform fuzzy ideas into executable specs through vibe engineering"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "textual>=6.11.0",
]

[project.scripts]
overkill = "overkill.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
